--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,7 +20,7 @@
   background-color: #061b23;
 }
 
-.movieCard {
+.itemCard {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,7 +30,7 @@
   margin: 20px;
 }
 
-.movieCardTitle {
+.itemCardTitle {
   font-size: 20px;
 }
 
@@ -44,4 +44,47 @@
 
 .movieCardFavouriteAction {
   margin: 5px;
+}
+
+.wrapContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.searchContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.searchInput {
+  flex: 1;
+  width: 60%;
+  font-size: 30px;
+  border-radius: 10px;
+}
+
+.searchText {
+  width: 60%;
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  margin: 10px;
+}
+
+.searchPlaceholder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #d8d8d8;
+  height: 500px;
+}
+
+.loginContainer {
+  /* width: 50%; */
+  display: flex;
+  justify-content: center;
+  margin: 20px;
 }
