--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,13 +3,47 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 10px 20px 10px 20px;
+  text-decoration: none;
 }
 
 .categoryOptions {
   display: flex;
-  justify-content: space-around;
-  margin: 30px;
+  justify-content: space-evenly;
+  align-items: stretch;
+
+  height: 100vh;
+}
+
+.categorySelection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  height: 100%;
+  width: 100%;
+  background-color: #061b23;
+  text-decoration: none;
+}
+
+.categorySelection :hover {
+  background-color: #01d572;
+}
+
+.categoryTitle {
+  color: white;
+  text-decoration: none;
+  font-size: 40px;
+  text-decoration-style: none;
+}
+
+.categoryTitle:hover {
+  text-decoration: none;
+}
+
+.categoryIcon {
+  font-size: 70px;
+  color: white;
 }
 
 .navLink {
@@ -18,6 +52,14 @@
 
 .navBar {
   background-color: #061b23;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  margin-bottom: 40px;
+  z-index: 2;
 }
 
 .itemCard {
@@ -127,4 +169,14 @@
 .previousPage {
   margin: 20px 0px 0px 60px;
   font-size: 50px;
+}
+
+.homePageTitle {
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 30px;
+  padding: 30px;
+  font-size: 30px;
+  color: white;
+  background-color: #061b23;
 }
